# log4cplus_wrap

./: .gitignore  CMakeLists.txt  Readme.md
conf/: urconfig.properties
include/: cnv_liblog4cplus.h  cnv_log_bridge.h
src/: CMakeLists.txt
src/test1/: CMakeLists.txt  test1.c
src/test2/: CMakeLists.txt  test2.cpp
src/util/: CMakeLists.txt  cnv_liblog4cplus.cpp
