
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_ROOT_PATH}/bin)
SET(SRC_LIST test1.c)
ADD_EXECUTABLE(test1 ${SRC_LIST})

INCLUDE_DIRECTORIES(${PROJECT_ROOT_PATH}/include)
INCLUDE_DIRECTORIES(${SYS_LIBLOG4CPLUS}/include)

#TARGET_LINK_LIBRARIES(test1 log4cplus)
TARGET_LINK_LIBRARIES(test1 -L${SYS_LIBLOG4CPLUS}/lib)
TARGET_LINK_LIBRARIES(test1 -L${PROJECT_ROOT_PATH}/lib64)
TARGET_LINK_LIBRARIES(test1 stdc++ m)
TARGET_LINK_LIBRARIES(test1 cnv_liblog4cplus)
TARGET_LINK_LIBRARIES(test1 log4cplus)




