
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_ROOT_PATH}/bin)
SET(SRC_LIST test2.cpp)
ADD_EXECUTABLE(test2 ${SRC_LIST})

INCLUDE_DIRECTORIES(${PROJECT_ROOT_PATH}/include)
INCLUDE_DIRECTORIES(${SYS_LIBLOG4CPLUS}/include)

if(NOT ${APPLE})
TARGET_LINK_LIBRARIES(test2  pthread rt)
endif()


TARGET_LINK_LIBRARIES(test2 ${PROJECT_ROOT_PATH}/lib/libcnv_liblog4cplus.a log4cplus)

